# psil-interpreter

./: .gitignore  README.md  README.txt  psil-interpreter.cabal  psil.hs  sample.psil  tests.psil
app/: Main.hs
src/Psil/: Core.hs  Eval.hs  Reader.hs  Typecheck.hs
