cabal-version:      3.0
name:               psil-interpreter
version:            0.1.0.0
synopsis:           A small statically-typed Lisp interpreter.
license:            MIT
license-file:       LICENSE
build-type:         Simple

library
    hs-source-dirs:   src
    exposed-modules:  Psil.Reader
                      Psil.Core
                      Psil.Eval
                      Psil.Typecheck
    build-depends:    base   >=4.20 && <4.21,
                      parsec >=3.1  && <3.2
    default-language: Haskell2010

executable psil
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base, parsec, psil-interpreter
    default-language: Haskell2010
